# mt5-mac-data-bridge

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  mt5_connector.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python.yml
docs/: architecture.md  usage.md
examples/: commands.example.json  path.hint.txt
mt5/: MT5_File_Bridge_Enhanced.mq5
src/mt5_bridge/: __init__.py  cli.py  config.py  connector.py
src/mt5_mac_file_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/python/: __init__.py  config_manager.py  mt5_connector.py
